[gd_scene load_steps=2 format=3 uid="uid://b42mykjenkxuf"]

[ext_resource type="Script" path="res://core/frames/frame_manager.gd" id="1_p4tlx"]

[node name="frame_manager" type="Node2D"]
script = ExtResource("1_p4tlx")

[node name="dummy_frame" type="Node2D" parent="."]

[node name="will" type="Label" parent="dummy_frame"]
offset_left = 824.0
offset_top = 440.0
offset_right = 1055.0
offset_bottom = 492.0
text = "Природа не теприт пустоты
скоро тут появятся нразные ништяки
а пока выберите видеокадр"
horizontal_alignment = 1

[node name="Button" type="Button" parent="dummy_frame"]
offset_left = 712.0
offset_top = 593.0
offset_right = 845.0
offset_bottom = 679.0
mouse_default_cursor_shape = 2
text = "КВА1"

[node name="Button2" type="Button" parent="dummy_frame"]
offset_left = 1087.0
offset_top = 594.0
offset_right = 1220.0
offset_bottom = 680.0
mouse_default_cursor_shape = 2
text = "КВА2"

[node name="frames" type="Node2D" parent="."]

[node name="controls" type="Node2D" parent="."]

[node name="exit" type="Button" parent="controls"]
offset_left = 28.0
offset_top = 17.0
offset_right = 126.0
offset_bottom = 78.0
text = "EXIT"

[connection signal="pressed" from="dummy_frame/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="dummy_frame/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="controls/exit" to="." method="_on_exit_pressed"]
